Increase title width to avoid truncation

--- a/app/assets/stylesheets/layout/_work_package_mobile.sass
+++ b/app/assets/stylesheets/layout/_work_package_mobile.sass
@@ -174,7 +174,7 @@
         padding: 0
 
         .title-container
-          max-width: 40%
+          max-width: 90%
           overflow: hidden
 
           span
